compiler/driver/tests/snapshots/codegen_snapshots__snap_string_length.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "nyra-snapshot-host"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@.str.N = private unnamed_addr constant [3 x i8] c"hi\00", align 1

declare i32 @printf(ptr, ...)
declare i32 @str_len(ptr)
declare void @abort()
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %str.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  %strlen.N = call i32 @str_len(ptr %str.N)
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %strlen.N)
  ret i32 0
}
