compiler/driver/tests/snapshots/codegen_snapshots__snap_template_string.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "nyra-snapshot-host"

@.str.N = private unnamed_addr constant [6 x i8] c"%s%s\0A\00", align 1
@.str.N = private unnamed_addr constant [7 x i8] c"Hello \00", align 1
@.str.N = private unnamed_addr constant [5 x i8] c"Nyra\00", align 1

declare i32 @printf(ptr, ...)
declare void @abort()
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %str.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  %str.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, ptr %str.N, ptr %str.N)
  ret i32 0
}
